Refactor:  Improve code structure and readability in DenseNet121 mode

--- a/DenseNet121.ipynb
+++ b/DenseNet121.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,9 +61,7 @@
     "test_dataset = datasets.ImageFolder(os.path.join(data_dir, 'test'), transform=transform)\n",
     "print(f'training data: {len(train_dataset)}')\n",
     "print(f'validation data: {len(val_dataset)}')\n",
-    "print(f'test data: {len(test_dataset)}')\n",
-    "\n",
-    " \n"
+    "print(f'test data: {len(test_dataset)}')\n"
    ]
   },
   {
@@ -90,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +103,6 @@
    ],
    "source": [
     "##* datasets loader\n",
-    "\n",
     "batch_size = 32\n",
     "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True); \n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
@@ -120,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +137,6 @@
     "    classes = list(original_dist.keys())\n",
     "    original_counts = [original_dist[cls] for cls in classes]\n",
     "    total_count = sum(original_counts)\n",
-    " \n",
-    "    \n",
     "    x = range(len(classes))\n",
     "    width = 0.4 \n",
     "    \n",
@@ -169,53 +164,47 @@
     "   \n",
     "    plt.show()\n",
     "\n",
-    "plot_combined_distributions(train_distribution )\n",
-    "\n",
-    "\n"
+    "plot_combined_distributions(train_distribution )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pred trained model DenseNet121 \n",
+    "#*pred trained model DenseNet121 \n",
     "num_classes = len(train_dataset.classes)\n",
     "densenet121_model = models.densenet121(weights=DenseNet121_Weights.DEFAULT)\n",
-    "#making modification of the number of class\n",
+    "#*making modification of the number of class\n",
     "densenet121_model.classifier = nn.Linear(densenet121_model.classifier.in_features, num_classes)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Hyperparamaters \n",
+    "#*Hyperparamaters \n",
     "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
     "model = densenet121_model.to(device) \n",
     "criterion = nn.CrossEntropyLoss();  \n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.00001 )\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.00001 ) #* tested with Adam and SDG optimizers with different learning rates. \n",
     "#optim.SGD(model.parameters(), lr=0.0001, momentum=0.9)\n",
     "num_epoch = 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#* we need to train the module \n",
     "\n",
     "def train_model(model, train_loader, criterion, optimizer, device):\n",
-    "    \n",
-    "\n",
-    "        #* we sting the model into train mode\n",
+    "        \n",
     "    model.train(); \n",
-    "    \n",
     "    learning_loss = 0.0; \n",
     "    correct = 0; \n",
     "    total = 0; \n",
@@ -223,7 +212,7 @@
     "    for inputs, labels in train_loader: \n",
     "        \n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
-    "        #* starting with the gradient from  the intial point 0 \n",
+    "        #* starting with the gradient from  the initial point 0 \n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(inputs); \n",
     "        loss = criterion(outputs, labels); \n",
@@ -242,18 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### evaluation the model\n",
     "\n",
     "def validation(model, val_loader, criterion, device ): \n",
     "    model.eval(); \n",
     "    running_loss = 0.0; \n",
     "    total = 0; \n",
     "    correct = 0; \n",
-    "    \n",
     "    with torch.no_grad(): \n",
     "        for inputs, labels in val_loader: \n",
     "            inputs, labels = inputs.to(device), labels.to(device); \n",
@@ -263,8 +250,7 @@
     "            _,predict = torch.max(outputs, 1); \n",
     "            \n",
     "            total  += labels.size(0); \n",
-    "            correct  += (predict == labels).sum().item()\n",
-    "            \n",
+    "            correct  += (predict == labels).sum().item()       \n",
     "    result_running_loss = running_loss / total if total > 0 else 0 \n",
     "    result_val_acc = 100* correct / total if total > 0 else 0; \n",
     "    return  result_running_loss, result_val_acc; "
@@ -272,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,11 +270,8 @@
     "        self.early_stop = False\n",
     "        self.delta = delta\n",
     "        self.path = path\n",
-    "    \n",
     "    def __call__(self, val_loss, model):\n",
     "        if val_loss < self.best_loss - self.delta:\n",
-    "        \n",
-    "           \n",
     "            self.best_loss = val_loss \n",
     "            self.Save_best_model(model)\n",
     "            self.counter = 0\n",
@@ -297,7 +280,6 @@
     "            print(f'Early stopping counter: {self.counter} out of {self.patience}')\n",
     "            if self.counter >= self.patience:\n",
     "                self.early_stop = True\n",
-    "    \n",
     "    def Save_best_model(self, model): \n",
     "        torch.save(model.state_dict(), self.path)\n",
     "             "
@@ -305,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -356,10 +338,8 @@
     "    train_accs.append(train_acc); \n",
     "    val_losses.append(val_loss)\n",
     "    val_accs.append(val_acc); \n",
-    "    \n",
-    "\n",
     "    print(f'Epoch {epoch+1}/{num_epoch}: Train Loss: {train_loss:.4f} Train Acc: {train_acc:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.4f}')\n",
-    "    \n",
+    "\n",
     "    earlyStopping(val_loss, model)\n",
     "    if earlyStopping.early_stop: \n",
     "        print('Note early stopping is triggered no need more training')\n",
@@ -370,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +376,7 @@
    ],
    "source": [
     "def Plot_metrics(train_losses, val_losses, train_accs, val_accs):\n",
-    "    #* range for the plot \n",
+    "  \n",
     "    epoch = range(1, len(train_losses)+1)\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(epoch, train_losses, label= 'Train Loss', color = 'blue',  marker='o', markersize=4, linestyle='-', linewidth=1)\n",
@@ -421,29 +401,26 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "\n",
     "Plot_metrics(train_losses, val_losses, train_accs, val_accs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "densenet121_model.load_state_dict(torch.load('best_denseNet121.pth' , weights_only=True))\n",
-    "model = densenet121_model.to(device)\n"
+    "model = densenet121_model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluation \n",
     "\n",
-    "#*  Model evaluation \n",
     "def evaluation(model, test_loader, criterion, device):\n",
     "    test_loss = 0.0\n",
     "    all_pred = []\n",
@@ -507,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +519,7 @@
     }
    ],
    "source": [
-    "## Confusion metrics \n",
+    "#* Confusion metrics \n",
     "accuracy = accuracy_score(all_preds, all_labels)\n",
     "print(f\"Accuracy: {100*accuracy:.2f}\")\n",
     "print('\\n classification Report')\n",
@@ -559,24 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#* for AUC plotting\n",
+    " \n",
     "#* plotting auc curve for each classes \n",
-    "\n",
-    "#* plotting auc curve for each classes \n",
-    "\n",
     "def plot_roc_curve(all_labels, all_probs, num_classes, class_names):\n",
-    "    \"\"\"\n",
-    "    Plot ROC curve for each class.\n",
-    "    Args:\n",
-    "        all_labels: Ground truth labels.\n",
-    "        all_probs: Predicted probabilities for each class.\n",
-    "        num_classes: Total number of classes.\n",
-    "        class_names: List of class names corresponding to the classes.\n",
-    "    \"\"\"\n",
+    "    \n",
     "    from sklearn.metrics import roc_curve, auc\n",
     "    import matplotlib.pyplot as plt\n",
     "    \n",
@@ -630,20 +597,6 @@
     "class_names = train_dataset.classes   \n",
     "plot_roc_curve(all_labels, all_probs, num_classes, class_names)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
