feat: add image transformations

--- a/imagTransforms.ipynb
+++ b/imagTransforms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -32,16 +32,16 @@
     "from torchvision import datasets \n",
     "import torch \n",
     "import numpy as np\n",
-    "# Load the image\n",
+    " \n",
     "img_path = './Testimages/IM-0115-0001.jpeg'\n",
     "Original_image = Image.open(img_path).convert(\"RGB\")\n",
     "\n",
-    "# Define transformations\n",
+    " \n",
     "transformations = [\n",
     "    (\"Original\", None),\n",
     "    (\"Grayscale\", transforms.Grayscale(num_output_channels=3)),\n",
     "    (\"Resize\", transforms.Resize((224, 224))),\n",
-    "    (\"Random Horizontal Flip\", transforms.RandomHorizontalFlip(p=1.0)),  # Force to apply flip\n",
+    "    (\"Random Horizontal Flip\", transforms.RandomHorizontalFlip(p=1.0)),  \n",
     "    (\"Random Rotation\", transforms.RandomRotation(10)),\n",
     "    (\"To Tensor\", transforms.ToTensor()),\n",
     "    (\"Norm-Pre-trained models\", transforms.Compose([\n",
@@ -57,7 +57,7 @@
     "    ]))\n",
     "]\n",
     "\n",
-    "# Create a figure to plot the transformations\n",
+    " \n",
     "fig, axes = plt.subplots(1, len(transformations), figsize=(17, 5))\n",
     "\n",
     "for ax, (name, transform) in zip(axes, transformations):\n",
@@ -66,10 +66,10 @@
     "    else:\n",
     "        transformed_image = transform(Original_image)\n",
     "\n",
-    "    # Display the image\n",
+    "   \n",
     "    if isinstance(transformed_image, Image.Image):  # PIL Image\n",
     "        ax.imshow(transformed_image)\n",
-    "    else:  # Tensor\n",
+    "    else:   \n",
     "        ax.imshow(transformed_image.permute(1, 2, 0).numpy(), cmap=\"gray\")\n",
     "    \n",
     "    ax.set_title(name)\n",
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),  # Ensure all images are resized to the same dimensions\n",
-    "    transforms.ToTensor(),         # Convert to tensor\n",
+    "    transforms.Resize((224, 224)), \n",
+    "    transforms.ToTensor(),         \n",
     "    #transforms.Normalize(mean=[0.5], std=[0.5])  # Example normalization for grayscale\n",
     "])\n"
    ]
