Refector: improve ResNet18 code

--- a/testResNet18.ipynb
+++ b/testResNet18.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -299,16 +299,9 @@
    ],
    "source": [
     "num_classes = len(train_dataset.classes)\n",
-    "class_names = train_dataset.classes  # Class names\n",
+    "class_names = train_dataset.classes  \n",
     "plot_roc_curve(all_labels, all_probs, num_classes, class_names)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
