--- a/vgg16.ipynb
+++ b/vgg16.ipynb
@@ -24,12 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transform = transforms.Compose([\n",
-    "    \n",
     "    transforms.Grayscale(num_output_channels=3),\n",
     "    transforms.Resize((224, 244)),\n",
     "    transforms.RandomHorizontalFlip(p=0.5),  \n",
@@ -63,28 +62,6 @@
     "print(f'training data: {len(train_dataset)}')\n",
     "print(f'validation data: {len(val_dataset)}')\n",
     "print(f'test data: {len(test_dataset)}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({'COVID19': 1218, 'Pneumonia': 1218, 'Tuberculosis': 1218, 'Normal': 1207})\n"
-     ]
-    }
-   ],
-   "source": [
-    "#TODO  check for the distribuation classes\n",
-    "def get_class_distribution(dataset): \n",
-    "    counter_pr_class = Counter([dataset.classes[label] for _, label in dataset.imgs])\n",
-    "    return counter_pr_class   \n",
-    "train_distribution = get_class_distribution(train_dataset)\n",
-    "print(train_distribution)\n"
    ]
   },
   {
@@ -131,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
     "model = vgg16_model.to(device) \n",
     "criterion = nn.CrossEntropyLoss();  \n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.00001)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.00001) #TODO test with different optimizers \n",
     "#optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
     "num_epoch = 20\n"
    ]
