feat: add name convention

--- a/ProposedCustomCNN.ipynb
+++ b/ProposedCustomCNN.ipynb
@@ -93,9 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SimpleCNN(nn.Module): #* a proposed Customize CNN\n",
+    "class ProposedCustomCNN(nn.Module): #* a proposed Customize CNN\n",
     "    def __init__(self, num_classes = 4):\n",
-    "        super(SimpleCNN, self).__init__()\n",
+    "        super(ProposedCustomCNN, self).__init__()\n",
     "        \n",
     "        self.features = nn.Sequential(\n",
     "            \n",
@@ -137,7 +137,7 @@
    "source": [
     "\n",
     "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "model = SimpleCNN().to(device) \n",
+    "model = ProposedCustomCNN().to(device) \n",
     "criterion = nn.CrossEntropyLoss();  \n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "num_epoch = 20"
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "earlyStopping = EarlyStopping(patience=5, verbose=True, path='best_simpleCNN.pth')\n",
+    "earlyStopping = EarlyStopping(patience=5, verbose=True, path='best_ProposedCustomCNN.pth')\n",
     "start_time = time.time()\n",
     "train_losses, train_accs, val_losses, val_accs =[], [], [], []\n",
     "for epoch in range(num_epoch):\n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,8 +353,8 @@
     }
    ],
    "source": [
-    "model = SimpleCNN(num_classes=4).to(device)   \n",
-    "model.load_state_dict(torch.load('best_simpleCNN.pth'))"
+    "model = ProposedCustomCNN(num_classes=4).to(device)   \n",
+    "model.load_state_dict(torch.load('best_ProposedCustomCNN.pth'))"
    ]
   },
   {
